fix: improve contrast ratio

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,8 +4,8 @@
 /*-------------------------- Variables */
 :root {
     /* #148EFF #C3FF17 */
-    /* Colours */
-    --main-colour: #10AAF7;
+    /* Colours 10AAF7*/
+    --main-colour: #079AE4;
     --lighter-main: #91E3FD;
     --accent-colour: #F3C311;
     --accent-lighter: #FDE691;
